fix. scrollbar

--- a/packages/agora-scenario-ui-kit/src/components/video-player/index.css
+++ b/packages/agora-scenario-ui-kit/src/components/video-player/index.css
@@ -190,6 +190,7 @@
 
 .video-container::-webkit-scrollbar {
   width: 0;
+  display: none;
 }
 /* 
 .video-item {
